@@ -31,33 +31,39 @@ extern "C" {
 
 
 enum {
-  dContactMu2		= 0x001,
-  dContactFDir1		= 0x002,
-  dContactBounce	= 0x004,
-  dContactSoftERP	= 0x008,
-  dContactSoftCFM	= 0x010,
-  dContactMotion1	= 0x020,
-  dContactMotion2	= 0x040,
-  dContactMotionN	= 0x080,
-  dContactSlip1		= 0x100,
-  dContactSlip2		= 0x200,
+  dContactMu2	  = 0x001,      /**< Use axis dependent friction */
+  dContactAxisDep = 0x001,      /**< Same as above */
+  dContactFDir1	  = 0x002,      /**< Use FDir for the first friction value */
+  dContactBounce  = 0x004,      /**< Restore collision energy anti-parallel to the normal */
+  dContactSoftERP = 0x008,      /**< Don't use global erp for penetration reduction */
+  dContactSoftCFM = 0x010,      /**< Don't use global cfm for penetration constraint */
+  dContactMotion1 = 0x020,      /**< Use a non-zero target velocity for the constraint */
+  dContactMotion2 = 0x040, 
+  dContactMotionN = 0x080, 
+  dContactSlip1	  = 0x100,      /**< Force-dependent slip. */
+  dContactSlip2	  = 0x200, 
+  dContactRolling = 0x400,      /**< Rolling/Angular friction */
 
-  dContactApprox0	= 0x0000,
-  dContactApprox1_1	= 0x1000,
-  dContactApprox1_2	= 0x2000,
-  dContactApprox1	= 0x3000
+  dContactApprox0   = 0x0000,
+  dContactApprox1_1 = 0x1000,
+  dContactApprox1_2 = 0x2000,
+  dContactApprox1_N = 0x4000,   /**< For rolling friction */
+  dContactApprox1   = 0x7000
 };
 
 
 typedef struct dSurfaceParameters {
   /* must always be defined */
-  int mode;
+  int   mode;
   dReal mu;
 
   /* only defined if the corresponding flag is set in mode */
   dReal mu2;
-  dReal bounce;
-  dReal bounce_vel;
+  dReal rho;                    /**< Rolling friction */
+  dReal rho2;
+  dReal rhoN;                   /**< Spinning friction */
+  dReal bounce;                 /**< Coefficient of restitution */
+  dReal bounce_vel;             /**< Bouncing threshold */
   dReal soft_erp;
   dReal soft_cfm;
   dReal motion1,motion2,motionN;
